cmake_minimum_required(VERSION 3.10)

message("CMAKE_VERSION: ${CMAKE_VERSION}")



set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if (BUILD_MY_CACHE)
    message("BUILD_MY_CACHE is ON")
    print_colored_message("------------------------------" COLOR magenta)
    print_colored_message("Building my_cache library..." COLOR yellow)
    
    set(MY_CACHE_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/src/util/my_cache)
    file(GLOB_RECURSE MY_CACHE_SOURCES ${PROJECT_SOURCE_DIR}/src/util/my_cache/*.cpp)

    pretty_print_list("MY_CACHE_INCLUDE_DIRECTORIES List" MY_CACHE_INCLUDE_DIRECTORIES)
    pretty_print_list("MY_CACHE_SOURCES List" MY_CACHE_SOURCES)

    add_library(my_cache STATIC ${MY_CACHE_SOURCES})
    target_include_directories(my_cache PUBLIC ${MY_CACHE_INCLUDE_DIRECTORIES})
    target_link_libraries(my_cache PUBLIC pthread)
    target_link_libraries(my_cache PUBLIC mylog)
    target_link_libraries(my_cache PUBLIC myconfig)
    print_colored_message("Building my_cache library over." COLOR yellow)
    print_colored_message("------------------------------" COLOR magenta)
else()
    message("BUILD_MY_CACHE is OFF, skipping my_cache library build")
    return()
endif()

